[gd_scene load_steps=21 format=3 uid="uid://ch5cjyndugxdb"]

[ext_resource type="Script" path="res://scenes/robo_dog.gd" id="1_0a1w1"]
[ext_resource type="Texture2D" uid="uid://csrujaccwyljg" path="res://assets/enemies/robodob/idle.png" id="1_uipac"]
[ext_resource type="Texture2D" uid="uid://co65t2tj2u4vr" path="res://assets/enemies/robodob/running.png" id="2_0njjx"]
[ext_resource type="PackedScene" uid="uid://dc30ob46cb8qr" path="res://scenes/health_component.tscn" id="4_jdmri"]
[ext_resource type="PackedScene" uid="uid://b84p80tl3pksp" path="res://scenes/enemy_component.tscn" id="5_tugy4"]
[ext_resource type="AudioStream" uid="uid://ddt6xvfnf0fbm" path="res://assets/sounds/retro-hurt-2-236675.mp3" id="6_1w6mq"]
[ext_resource type="AudioStream" uid="uid://cd26ehnojqqvl" path="res://assets/sounds/688244__newlocknew__robtmvmt_robot-stepsservoclattering-of-the-joints-of-the-legs_em.mp3" id="7_0tv1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n53fk"]
atlas = ExtResource("1_uipac")
region = Rect2(4, 24, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_mydtm"]
atlas = ExtResource("1_uipac")
region = Rect2(68, 24, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy4du"]
atlas = ExtResource("1_uipac")
region = Rect2(132, 24, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmu1n"]
atlas = ExtResource("1_uipac")
region = Rect2(4, 86, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_m43ci"]
atlas = ExtResource("1_uipac")
region = Rect2(68, 86, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8r4"]
atlas = ExtResource("1_uipac")
region = Rect2(132, 86, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr4hq"]
atlas = ExtResource("1_uipac")
region = Rect2(4, 148, 39, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsrem"]
atlas = ExtResource("2_0njjx")
region = Rect2(5, 23, 43, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajn7w"]
atlas = ExtResource("2_0njjx")
region = Rect2(66, 23, 43, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_glno0"]
atlas = ExtResource("2_0njjx")
region = Rect2(5, 89, 43, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5i3k"]
atlas = ExtResource("2_0njjx")
region = Rect2(66, 89, 43, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_csmhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n53fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mydtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy4du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmu1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m43ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr4hq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsrem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajn7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glno0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5i3k")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsrem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajn7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glno0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5i3k")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj6t1"]
size = Vector2(35.6667, 22.6667)

[node name="robo_dog" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_0a1w1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(21.6667, 10.3333)
sprite_frames = SubResource("SpriteFrames_csmhe")
animation = &"idle"
autoplay = "walking"
frame_progress = 0.578617

[node name="HealthComponent" parent="." instance=ExtResource("4_jdmri")]

[node name="EnemyComponent" parent="." node_paths=PackedStringArray("health_component") groups=["enemy"] instance=ExtResource("5_tugy4")]
collision_layer = 4
collision_mask = 10
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyComponent"]
position = Vector2(21.1667, 9)
shape = SubResource("RectangleShape2D_wj6t1")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(17, 10.5)
target_position = Vector2(-17, 9.53674e-07)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(17, 10.5)
target_position = Vector2(26, 0.166667)

[node name="RayCastLeftPlayer" type="RayCast2D" parent="."]
position = Vector2(17, 10.5)
scale = Vector2(12, 5)
target_position = Vector2(-17, 9.53674e-07)
collision_mask = 2
hit_from_inside = true

[node name="RayCastRightPlayer" type="RayCast2D" parent="."]
position = Vector2(17, 10.5)
scale = Vector2(12, 5)
target_position = Vector2(17, 0)
collision_mask = 2

[node name="RayCastRightBottom" type="RayCast2D" parent="."]
position = Vector2(41, 8.5)
scale = Vector2(1, 2)
target_position = Vector2(0, 14)

[node name="RayCastLeftBottom" type="RayCast2D" parent="."]
position = Vector2(2, 8.5)
scale = Vector2(1, 2)
target_position = Vector2(0, 14)

[node name="PlayerHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1w6mq")

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0tv1t")
volume_db = -6.0
pitch_scale = 2.0
autoplay = true
max_distance = 400.0
attenuation = 0.5

[node name="SprintSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0tv1t")
volume_db = -6.0
pitch_scale = 3.0
max_distance = 400.0
attenuation = 0.5

[connection signal="body_entered" from="EnemyComponent" to="EnemyComponent" method="_on_body_entered"]
